# sow-proposal-builder

./: Dockerfile.api  Dockerfile.streamlit  README.md  docker-compose.yml  pyproject.toml  tests.ipynb
src/: .env.example  api.py  app.py  config.py  streamlit_helpers.py
src/proposal_builder/: agent.py  helpers.py  llm.py
src/proposal_builder/prompts/: agentic_archetypes.txt  devops.txt  executive_summary.txt  gen_os.txt  mlops.txt  project_description.txt  requirements_and_pricing.txt  stakeholders_and_team.txt  system_prompt.txt  timeline_and_planing_ClosedProject.txt  timeline_and_planing_CoCreation.txt  timeline_and_planing_GENOS.txt  timeline_and_planning_ClosedProject.txt  timeline_and_planning_CoCreation.txt  timeline_and_planning_GENOS.txt
